<?xml version="1.0"?>
<package format="2">

  <name>command_msgs</name>
  <version>1.0.0</version>
  <description>ROS package with a generic command action</description>
  <author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
  <maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
